# manifold

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/plans/: 2026-07-01-manifold-design.md
extension/: README.md
scripts/: _bootstrap.py  phase0_forward.py  phase1_denoise.py
src/manifold/: __init__.py  cli.py  masks.py  model_mlx.py  rpc.py  sampler.py  schedule.py  typecheck.py
tests/: test_masks.py  test_model_mlx.py  test_sampler.py  test_schedule.py
