[project]
name = "manifold"
version = "0.0.1"
description = "Local, type-aware diffusion code editing — controllable reverse-diffusion sampling for Stable-DiffCoder on Apple Silicon (MLX)."
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "mlx>=0.31",
    "mlx-lm>=0.29",
    "huggingface-hub>=0.34",
    "numpy>=2.0",
]

[project.optional-dependencies]
# One-off PyTorch-CPU correctness oracle (heavy; install only when validating parity).
oracle = [
    "torch",
    "transformers==5.3.0",
    "accelerate",
]
dev = [
    "pytest>=8.0",
]

[project.scripts]
manifold = "manifold.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/manifold"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
